--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 	<head>
-		<title>Hello World</title>
+		<title>Austin's Pizza Parlor</title>
 		<link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
 		<link href="css/styles.css" rel="stylesheet" type="text/css" />
 		<script src="js/jquery-3.5.1.js"></script>
@@ -8,13 +8,23 @@
 	</head>
 	<body>
 		<div class="container">
-			<h1>Hello World</h1>
+			<h1>Austin's Pizza Parlor</h1>
 			<form id="formOne">
-				<p>Please insert a number and press submit!</p>
+				<p>Please use the form below to complete your pizza order.</p>
 				<div class="form-group">
-					<label for="userInput">Please enter a number:</label>
-					<input id="userInput" type="text" />
+					<label for="toppings"
+						>Please enter the toppings you would like separate by a
+						comma:</label
+					>
+					<input id="toppings" type="text" />
 				</div>
+				<!-- <div class="form-group">
+					<label for="userInput"
+						>Please enter the toppings you would like separate by a
+						comma:</label
+					>
+					<input id="userInput" type="text" />
+				</div> -->
 				<button type="submit" class="btn btn-success">Submit!</button>
 			</form>
 
