Correct error in option values on userToppings

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 					>
 					<select id="userToppings" name="pizzaSize">
 						<option value="small">Small</option>
-						<option value="small">Medium</option>
-						<option value="small">Large</option>
+						<option value="medium">Medium</option>
+						<option value="large">Large</option>
 					</select>
 				</div>
 				<div class="form-group">
