--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						>Please enter the toppings you would like separate by a
 						comma:</label
 					>
-					<input id="userSize" type="text" />
+					<input id="userSize" type="text" value="pepperoni" />
 				</div>
 
 				<button type="submit" class="btn btn-success">Submit!</button>
