--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
 					<input id="userSize" type="text" value="pepperoni" />
 				</div>
 
-				<button type="submit" class="btn btn-success">Submit!</button>
+				<button type="submit" class="btn btn-success">Order Pizza</button>
 			</form>
 
-			<p class="userResults">Your results are:</p>
+			<p class="userResults">
+				Thank you! Your order is processing! Your order is as follows:
+			</p>
 			<ul class="userResults2"></ul>
 		</div>
 	</body>
