Update the user success message

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</form>
 
 			<p class="userResults">
-				Thank you! Your order is processing! Your order is as follows:
+				Thank you! </br> Your order is baking... </br> </br> Your order is as follows:
 			</p>
 			<ul class="userResults2"></ul>
 		</div>
