Update the value to log user results details to

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<p class="userResults">
 				Thank you! </br> Your order is baking... </br> </br> Your order is as follows:
 			</p>
-			<ul class="userResults2"></ul>
+			<ul class="userResultsDetail"></ul>
 		</div>
 	</body>
 </html>
