--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 			<form id="formOne">
 				<p>Please use the form below to complete your pizza order.</p>
 				<div class="form-group">
-					<label for="userToppings"
+					<label for="userSize"
 						>Please enter the size of pizza that you would like</label
 					>
-					<select id="userToppings" name="pizzaSize">
+					<select id="userSize" name="pizzaSize">
 						<option value="small">Small</option>
 						<option value="medium">Medium</option>
 						<option value="large">Large</option>
 					</select>
 				</div>
 				<div class="form-group">
-					<label for="userSize"
+					<label for="userToppings"
 						>Please enter the toppings you would like separate by a
 						comma:</label
 					>
-					<input id="userSize" type="text" value="pepperoni" />
+					<input id="userToppings" type="text" value="pepperoni" />
 				</div>
 
 				<button type="submit" class="btn btn-success">Order Pizza</button>
